fixed hero sec spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@
 @media (max-width:991px) {
     .main-header{
         background-image: none;
+        min-height: auto;
     }
 }
 @media (max-width:767px) {
